--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     audio {
       margin-top: 1em;
     }
-    button, #downloadBtn {
+    button, #downloadBtn, #resetBtn, #mp3Btn {
       background-color: #4db6ac;
       color: white;
       border: none;
@@ -72,7 +72,7 @@
   </style>
 </head>
 <body>
-  <img id="logo" src="https://drive.google.com/uc?export=view&id=14cG1-zIMn_UBaQPkaK01dwlRqwUYTcN5" alt="Crescendos Logo">
+  <iframe id="logo" src="https://drive.google.com/file/d/14cG1-zIMn_UBaQPkaK01dwlRqwUYTcN5/preview" allow="autoplay"></iframe>
   <h1>Crescendos 25-26</h1>
   <label for="songSelect">Choose a song:</label>
   <select id="songSelect">
@@ -82,8 +82,10 @@
     <option value="https://raw.githubusercontent.com/jmocs94/Schmidt-Education/d6ffc2f4207c4d7dfc207c8d49da8863c02fe413/Crescendos%2025-26/5-I%20Lived%20-%20SATB%20(Faster).mp3">I Lived</option>
   </select>
 
+  <audio id="trackPlayer" controls style="margin-top: 1em; pointer-events: none;"></audio>
+
   <button id="recordButton">
-    <img id="recordIcon" src="https://cdn-icons-png.flaticon.com/512/727/727245.png" alt="Record">
+    <img id="recordIcon" src="https://cdn-icons-png.flaticon.com/512/634/634761.png" alt="Record">
   </button>
   <div id="countdown"></div>
   <div id="recordingLength"></div>
@@ -95,15 +97,21 @@
     <br>
     <input type="text" id="filename" placeholder="Enter filename">
     <button id="downloadBtn">Download</button>
+    <button id="mp3Btn">Download as MP3</button>
+    <button id="resetBtn">Reset</button>
   </div>
 
+  <script src="https://unpkg.com/@ffmpeg/ffmpeg@0.11.6/dist/ffmpeg.min.js"></script>
   <script>
     const recordButton = document.getElementById('recordButton');
     const recordIcon = document.getElementById('recordIcon');
     const songSelect = document.getElementById('songSelect');
+    const trackPlayer = document.getElementById('trackPlayer');
     const playback = document.getElementById('playback');
     const filenameInput = document.getElementById('filename');
     const downloadBtn = document.getElementById('downloadBtn');
+    const mp3Btn = document.getElementById('mp3Btn');
+    const resetBtn = document.getElementById('resetBtn');
     const recordingLength = document.getElementById('recordingLength');
     const countdownEl = document.getElementById('countdown');
     const waveformCanvas = document.getElementById('waveform');
@@ -116,6 +124,11 @@
     let startTime;
     let songAudio = new Audio();
     songAudio.crossOrigin = "anonymous";
+
+    songSelect.addEventListener('change', () => {
+      trackPlayer.src = songSelect.value;
+    });
+    trackPlayer.src = songSelect.value;
 
     function drawWaveform() {
       animationId = requestAnimationFrame(drawWaveform);
@@ -176,7 +189,7 @@
         drawWaveform();
 
         mediaRecorder.ondataavailable = e => audioChunks.push(e.data);
-        mediaRecorder.onstop = () => {
+        mediaRecorder.onstop = async () => {
           cancelAnimationFrame(animationId);
           const blob = new Blob(audioChunks, { type: 'audio/webm' });
           const url = URL.createObjectURL(blob);
@@ -185,11 +198,33 @@
           const songName = songSelect.options[songSelect.selectedIndex].text;
           const dateStr = new Date().toISOString().slice(2, 10);
           filenameInput.value = `${songName.replace(/\s+/g, '_')}_${dateStr}`;
+
           downloadBtn.onclick = () => {
             const a = document.createElement('a');
             a.href = url;
             a.download = `${filenameInput.value || 'recording'}.webm`;
             a.click();
+          };
+
+          mp3Btn.onclick = async () => {
+            const { createFFmpeg, fetchFile } = FFmpeg;
+            const ffmpeg = createFFmpeg({ log: true });
+            await ffmpeg.load();
+            ffmpeg.FS('writeFile', 'input.webm', await fetchFile(blob));
+            await ffmpeg.run('-i', 'input.webm', 'output.mp3');
+            const data = ffmpeg.FS('readFile', 'output.mp3');
+            const mp3Blob = new Blob([data.buffer], { type: 'audio/mp3' });
+            const mp3Url = URL.createObjectURL(mp3Blob);
+            const a = document.createElement('a');
+            a.href = mp3Url;
+            a.download = `${filenameInput.value || 'recording'}.mp3`;
+            a.click();
+          };
+
+          resetBtn.onclick = () => {
+            if (confirm('This will reset the page and delete your recording. Continue?')) {
+              window.location.reload();
+            }
           };
         };
 
@@ -209,7 +244,7 @@
           if (isRecording) {
             isRecording = false;
             mediaRecorder.stop();
-            recordIcon.src = 'https://cdn-icons-png.flaticon.com/512/727/727245.png';
+            recordIcon.src = 'https://cdn-icons-png.flaticon.com/512/634/634761.png';
           }
         };
 
@@ -221,11 +256,11 @@
     recordButton.addEventListener('click', () => {
       if (!isRecording) {
         isRecording = true;
-        recordIcon.src = 'https://cdn-icons-png.flaticon.com/512/1828/1828665.png'; // Stop icon
+        recordIcon.src = 'https://cdn-icons-png.flaticon.com/512/1828/1828665.png';
         startCountdown(3, startRecording);
       } else {
         isRecording = false;
-        recordIcon.src = 'https://cdn-icons-png.flaticon.com/512/727/727245.png';
+        recordIcon.src = 'https://cdn-icons-png.flaticon.com/512/634/634761.png';
         mediaRecorder.stop();
         songAudio.pause();
         songAudio.currentTime = 0;
