--- a/index.html
+++ b/index.html
@@ -98,18 +98,174 @@
     <audio id="playback" controls></audio>
     <br>
     <input type="text" id="filename" placeholder="Enter filename">
-    <button id="downloadBtn">Download</button>
-    <button id="mp3Btn">Download as MP3</button>
+        <button id="mp3Btn">Download as MP3</button>
     <button id="resetBtn">Reset</button>
   </div>
 
+  <script src="https://unpkg.com/@ffmpeg/ffmpeg@0.11.6/dist/ffmpeg.min.js"></script>
   <script>
+    const recordButton = document.getElementById('recordButton');
     const recordIcon = document.getElementById('recordIcon');
-    function updateRecordIcon(isRecording) {
-      recordIcon.src = isRecording
-        ? 'https://raw.githubusercontent.com/jmocs94/Schmidt-Education/c33a36b59f094ddec45d159cd38467f5cfaa081a/Stop.png'
-        : 'https://raw.githubusercontent.com/jmocs94/Schmidt-Education/c33a36b59f094ddec45d159cd38467f5cfaa081a/Record.png';
+    const songSelect = document.getElementById('songSelect');
+    const trackPlayer = document.getElementById('trackPlayer');
+    const playback = document.getElementById('playback');
+    const filenameInput = document.getElementById('filename');
+    const downloadBtn = document.getElementById('downloadBtn');
+    const mp3Btn = document.getElementById('mp3Btn');
+    const resetBtn = document.getElementById('resetBtn');
+    const recordingLength = document.getElementById('recordingLength');
+    const countdownEl = document.getElementById('countdown');
+    const waveformCanvas = document.getElementById('waveform');
+    const ctx = waveformCanvas.getContext('2d');
+
+    let mediaRecorder;
+    let audioChunks = [];
+    let isRecording = false;
+    let audioContext, analyser, dataArray, animationId;
+    let startTime;
+    let songAudio = new Audio();
+    songAudio.crossOrigin = "anonymous";
+
+    songSelect.addEventListener('change', () => {
+      trackPlayer.src = songSelect.value;
+    });
+    trackPlayer.src = songSelect.value;
+
+    function updateRecordIcon(state) {
+      recordIcon.src = state ? 
+        'https://raw.githubusercontent.com/jmocs94/Schmidt-Education/c33a36b59f094ddec45d159cd38467f5cfaa081a/Stop.png' : 
+        'https://raw.githubusercontent.com/jmocs94/Schmidt-Education/c33a36b59f094ddec45d159cd38467f5cfaa081a/Record.png';
     }
+
+    function drawWaveform() {
+      animationId = requestAnimationFrame(drawWaveform);
+      analyser.getByteTimeDomainData(dataArray);
+      ctx.fillStyle = '#fff';
+      ctx.fillRect(0, 0, waveformCanvas.width, waveformCanvas.height);
+      ctx.lineWidth = 2;
+      ctx.strokeStyle = '#00f';
+      ctx.beginPath();
+      const sliceWidth = waveformCanvas.width / dataArray.length;
+      let x = 0;
+      for (let i = 0; i < dataArray.length; i++) {
+        const v = dataArray[i] / 128.0;
+        const y = v * waveformCanvas.height / 2;
+        i === 0 ? ctx.moveTo(x, y) : ctx.lineTo(x, y);
+        x += sliceWidth;
+      }
+      ctx.lineTo(waveformCanvas.width, waveformCanvas.height / 2);
+      ctx.stroke();
+    }
+
+    function formatTime(seconds) {
+      const mins = Math.floor(seconds / 60);
+      const secs = Math.floor(seconds % 60).toString().padStart(2, '0');
+      return `${mins}:${secs}`;
+    }
+
+    function startCountdown(seconds, callback) {
+      countdownEl.textContent = seconds;
+      if (seconds > 0) {
+        setTimeout(() => startCountdown(seconds - 1, callback), 1000);
+      } else {
+        countdownEl.textContent = '';
+        callback();
+      }
+    }
+
+    async function startRecording() {
+      try {
+        const stream = await navigator.mediaDevices.getUserMedia({
+          audio: {
+            echoCancellation: false,
+            noiseSuppression: false,
+            autoGainControl: false
+          }
+        });
+
+        mediaRecorder = new MediaRecorder(stream);
+        audioChunks = [];
+
+        audioContext = new AudioContext();
+        analyser = audioContext.createAnalyser();
+        const source = audioContext.createMediaStreamSource(stream);
+        source.connect(analyser);
+        analyser.fftSize = 2048;
+        dataArray = new Uint8Array(analyser.fftSize);
+
+        drawWaveform();
+
+        mediaRecorder.ondataavailable = e => audioChunks.push(e.data);
+        mediaRecorder.onstop = async () => {
+          cancelAnimationFrame(animationId);
+          const blob = new Blob(audioChunks, { type: 'audio/webm' });
+          const url = URL.createObjectURL(blob);
+          playback.src = url;
+          document.getElementById('playbackContainer').style.display = 'block';
+          const songName = songSelect.options[songSelect.selectedIndex].text;
+          const dateStr = new Date().toISOString().slice(2, 10);
+          filenameInput.value = `${songName.replace(/\s+/g, '_')}_${dateStr}`;
+
+                    mp3Btn.onclick = async () => {
+            const { createFFmpeg, fetchFile } = FFmpeg;
+            const ffmpeg = createFFmpeg({ log: true });
+            await ffmpeg.load();
+            ffmpeg.FS('writeFile', 'input.webm', await fetchFile(blob));
+            await ffmpeg.run('-i', 'input.webm', 'output.mp3');
+            const data = ffmpeg.FS('readFile', 'output.mp3');
+            const mp3Blob = new Blob([data.buffer], { type: 'audio/mp3' });
+            const mp3Url = URL.createObjectURL(mp3Blob);
+            const a = document.createElement('a');
+            a.href = mp3Url;
+            a.download = `${filenameInput.value || 'recording'}.mp3`;
+            a.click();
+          };
+
+          resetBtn.onclick = () => {
+            if (confirm('This will reset the page and delete your recording. Continue?')) {
+              window.location.reload();
+            }
+          };
+        };
+
+        mediaRecorder.start();
+        startTime = Date.now();
+        setInterval(() => {
+          if (isRecording) {
+            const elapsed = (Date.now() - startTime) / 1000;
+            recordingLength.textContent = `Recording: ${formatTime(elapsed)}`;
+          }
+        }, 1000);
+
+        songAudio.src = songSelect.value;
+        songAudio.play();
+
+        songAudio.onended = () => {
+          if (isRecording) {
+            isRecording = false;
+            mediaRecorder.stop();
+            updateRecordIcon(false);
+          }
+        };
+
+      } catch (err) {
+        alert("Microphone access denied or error: " + err);
+      }
+    }
+
+    recordButton.addEventListener('click', () => {
+      if (!isRecording) {
+        isRecording = true;
+        updateRecordIcon(true);
+        startCountdown(3, startRecording);
+      } else {
+        isRecording = false;
+        updateRecordIcon(false);
+        mediaRecorder.stop();
+        songAudio.pause();
+        songAudio.currentTime = 0;
+      }
+    });
   </script>
 </body>
 </html>
