--- a/index.html
+++ b/index.html
@@ -73,7 +73,11 @@
 </head>
 <body>
   <img id="logo" src="https://raw.githubusercontent.com/jmocs94/Schmidt-Education/360c0fde872bd41d319af96a3e55bc9df7df3a54/Crescendos_w_trans.png" alt="Crescendos Logo">
-  <h1>Crescendos 25-26</h1>
+  $1
+  <p style="max-width: 600px; margin: 0 auto; font-size: 1.1em; color: #444;">
+    For best results, please use headphones while recording. This helps keep the background track out of your microphone,
+    so we can clearly hear your voice without any extra noise. Plus, it makes your final recording sound way more professional!
+  </p>
   <label for="songSelect">Choose a song:</label>
   <select id="songSelect">
     <option value="https://raw.githubusercontent.com/jmocs94/Schmidt-Education/d6ffc2f4207c4d7dfc207c8d49da8863c02fe413/Crescendos%2025-26/01%20Seize%20the%20Day%20-%20Performance.mp3">Seize the Day</option>
